sincronizzato header footer e botton torna su su ogni pagina

--- a/iFioriDiTania/src/main/resources/templates/admin/indexAdmin.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/indexAdmin.html
@@ -10,39 +10,59 @@
 
 <body>
 	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+		 <a  href="/logout">  <button>logout</button></a>
+		 <a th:href="@{/user}">Profilo</a>
+		 
+	    <h1> Amministrazione</h1>
+	    <nav>
+	        <ul>
+	            <li><a href="/gatti">Visualizza Tutti i gatti</a></li>
+	            <li><a href="/servizi">Visualizza Tutti i servizi</a></li>
+	            <li><a href="/eventi">Visualizza Tutti i eventi</a></li>
+	            <li><a href="/fiori">Visualizza Tutti i fiori</a></li>
+	            <li><a href="/utenti">Visualizza Tutti i utenti</a></li>
+	            <li><a href="/recensioni">Visualizza Tutti i recensioni</a></li>
+	            <li><a href="/accessori">Visualizza Tutti i accessori</a></li>
+	            <li><a href="/mazzi">Visualizza Tutti i mazzi</a></li>
+	        </ul>
+	    </nav>
 	
-    <h1> Amministrazione</h1>
-    <nav>
-        <ul>
-            <li><a href="/gatti">Visualizza Tutti i gatti</a></li>
-            <li><a href="/servizi">Visualizza Tutti i servizi</a></li>
-            <li><a href="/eventi">Visualizza Tutti i eventi</a></li>
-            <li><a href="/fiori">Visualizza Tutti i fiori</a></li>
-            <li><a href="/utenti">Visualizza Tutti i utenti</a></li>
-            <li><a href="/recensioni">Visualizza Tutti i recensioni</a></li>
-            <li><a href="/accessori">Visualizza Tutti i accessori</a></li>
-            <li><a href="/mazzi">Visualizza Tutti i mazzi</a></li>
-        </ul>
-    </nav>
-
-    <h1>Operazioni per amministratore</h1>
-    <ul>
-        <li><a href="/admin/pagina_aggiungiGatto">Aggiungi Nuovo Gatto</a></li>
-        <li><a href="/admin/gatti">Gestione Gatti</a></li>
-        <li><a href="/admin/pagina_aggiungiServizio">Aggiungi Nuovo Servizio</a></li>
-        <li><a href="/admin/servizi">Gestione Servizi</a></li>
-        <li><a href="/admin/pagina_aggiungiEvento">Aggiungi Nuovo Evento</a></li>
-        <li><a href="/admin/eventi">Gestione Eventi</a></li>
-        <li><a href="/admin/pagina_aggiungiFiore">Aggiungi Nuovo Fiore</a></li>
-        <li><a href="/admin/fiori">Gestione Fiori</a></li>
-        <li><a href="/admin/all_user">Gestione Utenti</a></li>
-        <li><a href="/admin/pagina_aggiungiRecensione">Aggiungi Nuova Recensione</a></li>
-        <li><a href="/admin/recensioni">Gestione Recensioni</a></li>
-        <li><a href="/admin/pagina_aggiungiAccessorio">Aggiungi Nuovo Accessorio</a></li>
-        <li><a href="/admin/accessori">Gestione Accessori</a></li>
-        <li><a href="/admin/pagina_aggiungiMazzo">Aggiungi Nuovo Mazzo</a></li>
-        <li><a href="/admin/mazzi">Gestione Mazzi</a></li>
-    </ul>
+	    <h1>Operazioni per amministratore</h1>
+	    <ul>
+	        <li><a href="/admin/pagina_aggiungiGatto">Aggiungi Nuovo Gatto</a></li>
+	        <li><a href="/admin/gatti">Gestione Gatti</a></li>
+	     </ul>   
+	     <ul>
+	        <li><a href="/admin/pagina_aggiungiServizio">Aggiungi Nuovo Servizio</a></li>
+	        <li><a href="/admin/servizi">Gestione Servizi</a></li>
+	      </ul>
+	      <ul>  
+	        <li><a href="/admin/pagina_aggiungiEvento">Aggiungi Nuovo Evento</a></li>
+	        <li><a href="/admin/eventi">Gestione Eventi</a></li>
+	      </ul>
+	      <ul>  
+	        <li><a href="/admin/pagina_aggiungiFiore">Aggiungi Nuovo Fiore</a></li>
+	        <li><a href="/admin/fiori">Gestione Fiori</a></li>
+	      </ul> 
+	      <ul> 
+	        <li><a href="/admin/all_user">Gestione Utenti</a></li>
+	      </ul>
+	      <ul>  
+	        <li><a href="/admin/pagina_aggiungiRecensione">Aggiungi Nuova Recensione</a></li>
+	        <li><a href="/admin/recensioni">Gestione Recensioni</a></li>
+	       </ul> 
+	       <ul>
+	        <li><a href="/admin/pagina_aggiungiAccessorio">Aggiungi Nuovo Accessorio</a></li>
+	        <li><a href="/admin/accessori">Gestione Accessori</a></li>
+	       </ul>
+	       <ul>
+	        <li><a href="/admin/pagina_aggiungiMazzo">Aggiungi Nuovo Mazzo</a></li>
+	        <li><a href="/admin/mazzi">Gestione Mazzi</a></li>
+	    </ul>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div>    
 </body>
 
 
