--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_utente_amministratore/utente.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_utente_amministratore/utente.html
@@ -2,13 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Dettagli Utente</title>
+             <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <h1 th:text=" ${utenteVisualizzato.name}"></h1>
-    <p>Descrizione: <span th:text="${utenteVisualizzato.surname}"></span></p>
-    <div>
-        <h3>Foto</h3>
-
-    </div>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1 th:text=" ${utenteVisualizzato.name}"></h1>
+	    <p>Descrizione: <span th:text="${utenteVisualizzato.surname}"></span></p>
+	    <div>
+	        <h3>Foto</h3>
+	
+	    </div>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div>	    
 </body>
 </html>
