--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_accessorio_amministratore/PaginaAggiungiAccessorio.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_accessorio_amministratore/PaginaAggiungiAccessorio.html
@@ -2,30 +2,37 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Aggiungi Accessorio</title>
+             <link rel="stylesheet" href="/css/styles.css" />
+    
 </head>
 <body>
-    <h1>Aggiungi Nuovo Accessorio</h1>
-    <form th:action="@{/admin/aggiungiAccessorio}" th:object="${accessorio}" method="post" enctype="multipart/form-data">
-        
-		<div>
-            <label>Nome:</label>
-            <input type="text" th:field="*{nome_accessorio}" />
-        </div>
-        <div>
-            <label>Descrizione:</label>
-            <textarea th:field="*{descrizione_accessorio}"></textarea>
-        </div>
-        <div>
-            <label>categoria:</label>
-            <textarea th:field="*{categoria_accessorio}"></textarea>
-        </div>
-        <div>
-            <label>Archiviato:</label>
-            <input type="checkbox" th:field="*{archiviato_accessorio}" />
-        </div>
-		<label for="image">Choose image to upload</label>
-		<input type="file" name="image" accept="image/*" required>
-        <button type="submit">Aggiungi</button>
-    </form>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1>Aggiungi Nuovo Accessorio</h1>
+	    <form th:action="@{/admin/aggiungiAccessorio}" th:object="${accessorio}" method="post" enctype="multipart/form-data">
+	        
+			<div>
+	            <label>Nome:</label>
+	            <input type="text" th:field="*{nome_accessorio}" />
+	        </div>
+	        <div>
+	            <label>Descrizione:</label>
+	            <textarea th:field="*{descrizione_accessorio}"></textarea>
+	        </div>
+	        <div>
+	            <label>categoria:</label>
+	            <textarea th:field="*{categoria_accessorio}"></textarea>
+	        </div>
+	        <div>
+	            <label>Archiviato:</label>
+	            <input type="checkbox" th:field="*{archiviato_accessorio}" />
+	        </div>
+			<label for="image">Choose image to upload</label>
+			<input type="file" name="image" accept="image/*" required>
+	        <button type="submit">Aggiungi</button>
+	    </form>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div>
 </body>
 </html>
