--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_fiore_amministratore/ErroreModificaFiore.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_fiore_amministratore/ErroreModificaFiore.html
@@ -2,10 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Errore Modifica Fiore</title>
+             <link rel="stylesheet" href="/css/styles.css" />
+    
 </head>
 <body>
-    <h1>Errore nella modifica del fiore</h1>
-    <p>Si è verificato un errore durante la modifica del fiore. Per favore riprova.</p>
-    <a href="/admin/PaginaModificaFiore/${fiore.id}">Torna indietro</a>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1>Errore nella modifica del fiore</h1>
+	    <p>Si è verificato un errore durante la modifica del fiore. Per favore riprova.</p>
+	    <a href="/admin/PaginaModificaFiore/${fiore.id}">Torna indietro</a>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div>	    
 </body>
 </html>
