--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_fiore_amministratore/fiori.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_fiore_amministratore/fiori.html
@@ -2,18 +2,24 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Amministrazione - Tutti i Fiori</title>
+             <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <h1>Gestione di tutti i fiori</h1>
-    <ul>
-        <li th:each="fiore : ${tutti_fiori}">
-            <a th:href="@{/admin/PaginaModificaFiore/{id}(id=${fiore.id})}" th:text="${fiore.nome_fiore}"></a>
-			<form th:action="@{/admin/rimuoviFiore/{id}(id=${fiore.id})}" method="post">
-			    <input type="hidden" name="_method" value="delete" />
-			    <button type="submit">ELIMINA</button>
-			</form>
-        </li>
-    </ul>
-    <a href="/admin/pagina_aggiungiFiore">Aggiungi Nuovo Fiore</a>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1>Gestione di tutti i fiori</h1>
+	    <ul>
+	        <li th:each="fiore : ${tutti_fiori}">
+	            <a th:href="@{/admin/PaginaModificaFiore/{id}(id=${fiore.id})}" th:text="${fiore.nome_fiore}"></a>
+				<form th:action="@{/admin/rimuoviFiore/{id}(id=${fiore.id})}" method="post">
+				    <input type="hidden" name="_method" value="delete" />
+				    <button type="submit">ELIMINA</button>
+				</form>
+	        </li>
+	    </ul>
+	    <a href="/admin/pagina_aggiungiFiore">Aggiungi Nuovo Fiore</a>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div>    
 </body>
 </html>
