--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_gatto_amministratore/gatti.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_gatto_amministratore/gatti.html
@@ -2,18 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Amministrazione - Tutti i Gatti</title>
+             <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <h1>Gestione di tutti i gatti</h1>
-    <ul>
-        <li th:each="gatto : ${tutti_gatti}">
-            <a th:href="@{/admin/PaginaModificaGatto/{id}(id=${gatto.id})}" th:text="${gatto.nome_gatto}"></a>
-			<form th:action="@{/admin/rimuoviGatto/{id}(id=${gatto.id})}" method="post">
-			    <input type="hidden" name="_method" value="delete" />
-			    <button type="submit">ELIMINA</button>
-			</form>
-        </li>
-    </ul>
-    <a href="/admin/pagina_aggiungiGatto">Aggiungi Nuovo Gatto</a>
-</body>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1>Gestione di tutti i gatti</h1>
+	    <ul>
+	        <li th:each="gatto : ${tutti_gatti}">
+	            <a th:href="@{/admin/PaginaModificaGatto/{id}(id=${gatto.id})}" th:text="${gatto.nome_gatto}"></a>
+				<form th:action="@{/admin/rimuoviGatto/{id}(id=${gatto.id})}" method="post">
+				    <input type="hidden" name="_method" value="delete" />
+				    <button type="submit">ELIMINA</button>
+				</form>
+	        </li>
+	    </ul>
+	    <a href="/admin/pagina_aggiungiGatto">Aggiungi Nuovo Gatto</a>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div></body>
 </html>
