--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_mazzo_amministratore/PaginaAggiungiMazzo.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_mazzo_amministratore/PaginaAggiungiMazzo.html
@@ -2,25 +2,32 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Aggiungi Mazzo</title>
+             <link rel="stylesheet" href="/css/styles.css" />
+    
 </head>
-<body>
-    <h1>Aggiungi Nuovo Mazzo</h1>
-    <form th:action="@{/admin/aggiungiMazzo}" th:object="${mazzo}" method="post" enctype="multipart/form-data">
-        <div>
-            <label>Nome:</label>
-            <input type="text" th:field="*{nome_mazzo}" />
-        </div>
-        <div>
-            <label>Descrizione:</label>
-            <textarea th:field="*{descrizione_mazzo}"></textarea>
-        </div>
-        <div>
-            <label>Archiviato:</label>
-            <input type="checkbox" th:field="*{archiviato_mazzo}" />
-        </div>
-		<label for="image">Choose image to upload</label>
-		 <input type="file" name="image" accept="image/*" required>
-        <button type="submit">Aggiungi</button>
-    </form>
-</body>
+	<body>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	
+	    <h1>Aggiungi Nuovo Mazzo</h1>
+	    <form th:action="@{/admin/aggiungiMazzo}" th:object="${mazzo}" method="post" enctype="multipart/form-data">
+	        <div>
+	            <label>Nome:</label>
+	            <input type="text" th:field="*{nome_mazzo}" />
+	        </div>
+	        <div>
+	            <label>Descrizione:</label>
+	            <textarea th:field="*{descrizione_mazzo}"></textarea>
+	        </div>
+	        <div>
+	            <label>Archiviato:</label>
+	            <input type="checkbox" th:field="*{archiviato_mazzo}" />
+	        </div>
+			<label for="image">Choose image to upload</label>
+			 <input type="file" name="image" accept="image/*" required>
+	        <button type="submit">Aggiungi</button>
+	    </form>	
+	 </div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div></body>
 </html>
