--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_mazzo_amministratore/PaginaModificaMazzo.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_mazzo_amministratore/PaginaModificaMazzo.html
@@ -2,89 +2,95 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Modifica Mazzo</title>
+             <link rel="stylesheet" href="/css/styles.css" />
+    
 </head>
 <body>
-    <h1>Modifica Mazzo</h1>
-    <form th:action="@{/admin/PaginaModificaMazzo/modifica}" th:object="${mazzo}" method="post">
-        <input type="hidden" th:field="*{id}" />
-        <div>
-            <label>Nome:</label>
-            <input type="text" th:field="*{nome_mazzo}" />
-        </div>
-        <div>
-            <label>Descrizione:</label>
-            <textarea th:field="*{descrizione_mazzo}"></textarea>
-        </div>
-        <div>
-            <label>Archiviato:</label>
-            <input type="checkbox" th:field="*{archiviato_mazzo}" />
-        </div>
-        <button type="submit">Salva</button>
-    </form>
-    <div>
-        <h3>Foto</h3>
-        <form th:action="@{/admin/MazzosavePhoto/{mazzoId}(mazzoId=${mazzo.id})}" method="post" enctype="multipart/form-data">
-            <label for="image">Choose image to upload</label>
-            <input type="file" name="image" accept="image/*" required>
-            <button type="submit">Aggiungi Foto</button>
-        </form>
-        <ul>
-            <li th:each="foto : ${mazzo.foto_mazzo}">
-                <img th:src="@{/images/foto_mazzi/{foto}(foto=${foto})}" alt="Foto Mazzo"/>
-                <form th:action="@{'/admin/mazzo/removePhoto/' + *{id}}" method="post">
-                    <input type="hidden" name="image" th:value="${foto}">
-                    <button type="submit">Rimuovi Foto</button>
-                </form>
-            </li>
-        </ul>
-		<ul> <h2>fiori del mazzo</h2>
-
-		    <li th:each="fioreDelMazzo : ${mazzo.fioriDelMazzo}">
-				<h1 th:text="${fioreDelMazzo.nome_fiore}"></h1>
-				<p>Descrizione: <span th:text="${fioreDelMazzo.descrizione_fiore}"></span></p>
-				<p>Archiviato: <span th:text="${fioreDelMazzo.archiviato_fiore} ? 'Sì' : 'No'"></span></p>
-				<form th:action="@{/admin/mazzo/fiore/rimuovi/{fioreId}(fioreId=${fioreDelMazzo.id})}" method="post">
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1>Modifica Mazzo</h1>
+	    <form th:action="@{/admin/PaginaModificaMazzo/modifica}" th:object="${mazzo}" method="post">
+	        <input type="hidden" th:field="*{id}" />
+	        <div>
+	            <label>Nome:</label>
+	            <input type="text" th:field="*{nome_mazzo}" />
+	        </div>
+	        <div>
+	            <label>Descrizione:</label>
+	            <textarea th:field="*{descrizione_mazzo}"></textarea>
+	        </div>
+	        <div>
+	            <label>Archiviato:</label>
+	            <input type="checkbox" th:field="*{archiviato_mazzo}" />
+	        </div>
+	        <button type="submit">Salva</button>
+	    </form>
+	    <div>
+	        <h3>Foto</h3>
+	        <form th:action="@{/admin/MazzosavePhoto/{mazzoId}(mazzoId=${mazzo.id})}" method="post" enctype="multipart/form-data">
+	            <label for="image">Choose image to upload</label>
+	            <input type="file" name="image" accept="image/*" required>
+	            <button type="submit">Aggiungi Foto</button>
+	        </form>
+	        <ul>
+	            <li th:each="foto : ${mazzo.foto_mazzo}">
+	                <img th:src="@{/images/foto_mazzi/{foto}(foto=${foto})}" alt="Foto Mazzo"/>
+	                <form th:action="@{'/admin/mazzo/removePhoto/' + *{id}}" method="post">
+	                    <input type="hidden" name="image" th:value="${foto}">
+	                    <button type="submit">Rimuovi Foto</button>
+	                </form>
+	            </li>
+	        </ul>
+			<ul> <h2>fiori del mazzo</h2>
+	
+			    <li th:each="fioreDelMazzo : ${mazzo.fioriDelMazzo}">
+					<h1 th:text="${fioreDelMazzo.nome_fiore}"></h1>
+					<p>Descrizione: <span th:text="${fioreDelMazzo.descrizione_fiore}"></span></p>
+					<p>Archiviato: <span th:text="${fioreDelMazzo.archiviato_fiore} ? 'Sì' : 'No'"></span></p>
+					<form th:action="@{/admin/mazzo/fiore/rimuovi/{fioreId}(fioreId=${fioreDelMazzo.id})}" method="post">
+						<input type="hidden" th:name="mazzoId" th:value="${mazzo.id}" />
+						<button type="submit">rimuovi fiore</button>
+					</form>
+			    </li>
+			</ul>
+			<ul> <h2>accessorio del mazzo</h2>
+	
+			    <li th:each="accessorioDelMazzo : ${mazzo.accessoriDelMazzo}">
+					<h1 th:text="${accessorioDelMazzo.nome_accessorio}"></h1>
+					<p>Descrizione: <span th:text="${accessorioDelMazzo.descrizione_accessorio}"></span></p>
+					<p>Archiviato: <span th:text="${accessorioDelMazzo.archiviato_accessorio} ? 'Sì' : 'No'"></span></p>
+					<form th:action="@{/admin/mazzo/accessorio/rimuovi/{accessorioId}(accessorioId=${accessorioDelMazzo.id})}" method="post">
+						<input type="hidden" th:name="mazzoId" th:value="${mazzo.id}" />
+						<button type="submit">rimuovi accessorio</button>
+					</form>
+			    </li>
+			</ul>
+	    </div>
+		<h1>Gestione di tutti gli accessori</h1>
+		<ul>
+		    <li th:each="accessorio : ${tutti_accessori}">
+		        <a th:href="@{/admin/PaginaModificaAccessorio/{id}(id=${accessorio.id})}" th:text="${accessorio.nome_accessorio}"></a>
+				<form th:action="@{/admin/aggiungiAccessorioAlMazzo/{accessorioId}(accessorioId=${accessorio.id})}" method="post">
 					<input type="hidden" th:name="mazzoId" th:value="${mazzo.id}" />
-					<button type="submit">rimuovi fiore</button>
-				</form>
+					 
+				<button type="submit">Aggiungi Accessorio</button>
+					</form>
 		    </li>
 		</ul>
-		<ul> <h2>accessorio del mazzo</h2>
-
-		    <li th:each="accessorioDelMazzo : ${mazzo.accessoriDelMazzo}">
-				<h1 th:text="${accessorioDelMazzo.nome_accessorio}"></h1>
-				<p>Descrizione: <span th:text="${accessorioDelMazzo.descrizione_accessorio}"></span></p>
-				<p>Archiviato: <span th:text="${accessorioDelMazzo.archiviato_accessorio} ? 'Sì' : 'No'"></span></p>
-				<form th:action="@{/admin/mazzo/accessorio/rimuovi/{accessorioId}(accessorioId=${accessorioDelMazzo.id})}" method="post">
-					<input type="hidden" th:name="mazzoId" th:value="${mazzo.id}" />
-					<button type="submit">rimuovi accessorio</button>
-				</form>
-		    </li>
-		</ul>
-    </div>
-	<h1>Gestione di tutti gli accessori</h1>
-	<ul>
-	    <li th:each="accessorio : ${tutti_accessori}">
-	        <a th:href="@{/admin/PaginaModificaAccessorio/{id}(id=${accessorio.id})}" th:text="${accessorio.nome_accessorio}"></a>
-			<form th:action="@{/admin/aggiungiAccessorioAlMazzo/{accessorioId}(accessorioId=${accessorio.id})}" method="post">
+		<a href="/admin/pagina_aggiungiAccessorio">Crea Nuovo Accessorio</a>
+		<h1>Gestione di tutti i fiori</h1>
+		<ul>
+		    <li th:each="fiore : ${tutti_fiori}">
+		        <a th:href="@{/admin/PaginaModificaFiore/{id}(id=${fiore.id})}" th:text="${fiore.nome_fiore}"></a>
+	  		<form th:action="@{/admin/aggiungiFioreAlMazzo/{fioreId}(fioreId=${fiore.id})}" method="post">
 				<input type="hidden" th:name="mazzoId" th:value="${mazzo.id}" />
 				 
-			<button type="submit">Aggiungi Accessorio</button>
+		   <button type="submit">Aggiungi fiore</button>
 				</form>
-	    </li>
-	</ul>
-	<a href="/admin/pagina_aggiungiAccessorio">Crea Nuovo Accessorio</a>
-	<h1>Gestione di tutti i fiori</h1>
-	<ul>
-	    <li th:each="fiore : ${tutti_fiori}">
-	        <a th:href="@{/admin/PaginaModificaFiore/{id}(id=${fiore.id})}" th:text="${fiore.nome_fiore}"></a>
-  		<form th:action="@{/admin/aggiungiFioreAlMazzo/{fioreId}(fioreId=${fiore.id})}" method="post">
-			<input type="hidden" th:name="mazzoId" th:value="${mazzo.id}" />
-			 
-	   <button type="submit">Aggiungi fiore</button>
-			</form>
-	    </li>
-	</ul>
-	<a href="/admin/pagina_aggiungiFiore">Crea Nuovo Fiore</a>
-</body>
+		    </li>
+		</ul>
+		<a href="/admin/pagina_aggiungiFiore">Crea Nuovo Fiore</a>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div></body>
 </html>
