--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/ErroreModificaRecensione.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/ErroreModificaRecensione.html
@@ -2,10 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Errore Modifica Recensione</title>
+             <link rel="stylesheet" href="/css/styles.css" />
+    
 </head>
 <body>
-    <h1>Errore nella modifica della recensione</h1>
-    <p>Si è verificato un errore durante la modifica della recensione. Per favore riprova.</p>
-    <a href="/admin/PaginaModificaRecensione/${recensione.id}">Torna indietro</a>
-</body>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1>Errore nella modifica della recensione</h1>
+	    <p>Si è verificato un errore durante la modifica della recensione. Per favore riprova.</p>
+	    <a href="/admin/PaginaModificaRecensione/${recensione.id}">Torna indietro</a>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div></body>
 </html>
