--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/recensioni.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_recensione_amministratore/recensioni.html
@@ -2,18 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Amministrazione - Tutte le Recensioni</title>
+             <link rel="stylesheet" href="/css/styles.css" />
+    
 </head>
 <body>
-    <h1>Gestione di tutte le recensioni</h1>
-    <ul>
-        <li th:each="recensione : ${tutte_recensioni}">
-            <a th:href="@{/admin/PaginaModificaRecensione/{id}(id=${recensione.id})}" th:text="${recensione.descrizione_recensione}"></a>
-            <form th:action="@{/admin/rimuoviRecensione/{id}(id=${recensione.id})}" method="post">
-                <input type="hidden" name="_method" value="delete" />
-                <button type="submit">ELIMINA</button>
-            </form>
-        </li>
-    </ul>
-    <a href="/admin/pagina_aggiungiRecensione">Aggiungi Nuova Recensione</a>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+	    <h1>Gestione di tutte le recensioni</h1>
+	    <ul>
+	        <li th:each="recensione : ${tutte_recensioni}">
+	            <a th:href="@{/admin/PaginaModificaRecensione/{id}(id=${recensione.id})}" th:text="${recensione.descrizione_recensione}"></a>
+	            <form th:action="@{/admin/rimuoviRecensione/{id}(id=${recensione.id})}" method="post">
+	                <input type="hidden" name="_method" value="delete" />
+	                <button type="submit">ELIMINA</button>
+	            </form>
+	        </li>
+	    </ul>
+	    <a href="/admin/pagina_aggiungiRecensione">Aggiungi Nuova Recensione</a>
+	</div> 
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div>
 </body>
 </html>
